fixing bugs on firefox, deleting scrollbars on explorer and firefox, style of sound controller, input[number] on firefox and explorer.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     font-family: Helvetica, sans-serif;
     color: #fff;
     -webkit-tap-highlight-color: transparent;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 html,
@@ -30,11 +32,9 @@ body {
 
 body {
     background-color: #2c2c2c;
-    background-image: url(images/background.png);
+    background-image: url(/images/background.png);
     background-size: cover;
     background-position: center;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
 
 /* ENTER APP LABEL */
@@ -1007,9 +1007,17 @@ h5 {
     color: rgba(255, 255, 255, 0.6);
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
 
 /* SOUND CONTROLLER */
@@ -1069,6 +1077,25 @@ input[type="number"]::-webkit-outer-spin-button {
     cursor: pointer;
 }
 
+#volume::-moz-range-thumb {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#volume::-ms-thumb {
+    width: 16px;
+    height: 16px;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
 #progress {
     width: 200px;
     height: 20px;
@@ -1079,6 +1106,7 @@ input[type="number"]::-webkit-outer-spin-button {
     left: 0;
     border-radius: 10px;
     overflow: hidden;
+    border: none;
 }
 
 #progress::-webkit-progress-bar {
@@ -1086,6 +1114,14 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 #progress::-webkit-progress-value {
+    background-color: rgb(73, 73, 73);
+}
+
+#progress::-moz-progress-bar {
+    background-color: rgb(73, 73, 73);
+}
+
+#progress::-ms-fill {
     background-color: rgb(73, 73, 73);
 }
 
